k8s/security/vault/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
    app.kubernetes.io/component: security
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-west-2:ACCOUNT_ID:certificate/CERT_ID"
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8200
    targetPort: 8200
    protocol: TCP
  - name: https-internal
    port: 8201
    targetPort: 8201
    protocol: TCP
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
  sessionAffinity: ClientIP
---
apiVersion: v1
kind: Service
metadata:
  name: vault-internal
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
    app.kubernetes.io/component: security
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 8200
    targetPort: 8200
    protocol: TCP
  - name: https-internal
    port: 8201
    targetPort: 8201
    protocol: TCP
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
---
apiVersion: v1
kind: Service
metadata:
  name: vault-ui
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
    app.kubernetes.io/component: security
    app.kubernetes.io/part-of: vault-ui
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8200
    targetPort: 8200
    protocol: TCP
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
